# vrm-anatomy

./: Cargo.toml
crates/vrm-anatomy/: Cargo.toml
crates/vrm-anatomy/src/: animation.rs  expression.rs  gltf_types.rs  lib.rs  skeleton.rs  skinning.rs  vrm.rs
crates/vrm-seimei/: Cargo.toml
crates/vrm-seimei/src/: lib.rs
